[gd_scene load_steps=9 format=2]

[ext_resource path="res://Characters/Player/CameraShake.gd" type="Script" id=1]
[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Bullet/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Gun/Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Stats/Health.tscn" type="PackedScene" id=5]
[ext_resource path="res://Characters/Player/Player.tres" type="SpriteFrames" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 17 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Direction" type="Position2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Direction"]
position = Vector2( 0, -25 )
scale = Vector2( 0.055, 0.055 )
frames = ExtResource( 6 )
animation = "idle"

[node name="Area2D" type="Area2D" parent="Direction"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/Area2D"]
shape = SubResource( 2 )

[node name="Gun" parent="Direction" instance=ExtResource( 4 )]
position = Vector2( 5, 7 )
scale = Vector2( 0.4, 0.4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.6, 0.6 )
smoothing_enabled = true

[node name="CameraShake" type="Node" parent="Camera2D"]
script = ExtResource( 1 )

[node name="ShakeTween" type="Tween" parent="Camera2D/CameraShake"]

[node name="FrequencyTimer" type="Timer" parent="Camera2D/CameraShake"]

[node name="DurationTimer" type="Timer" parent="Camera2D/CameraShake"]
one_shot = true

[node name="Health" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 8 )

[connection signal="body_entered" from="Direction/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Camera2D/CameraShake/FrequencyTimer" to="Camera2D/CameraShake" method="_on_FrequencyTimer_timeout"]
[connection signal="timeout" from="Camera2D/CameraShake/DurationTimer" to="Camera2D/CameraShake" method="_on_DurationTimer_timeout"]
